--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.4",
         "jsonwebtoken": "8.5.1",
-        "jss": "10.0.0-alpha.16",
-        "jss-extend": "6.2.0",
+        "jss": "10.5.2",
+        "jss-extend": "^9.7.0",
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
         "lodash": "4.17.11",
