--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
         "@material-ui/icons": "4.0.1",
         "@material-ui/pickers": "3.0.0",
         "@material-ui/styles": "4.0.1",
-        "auth0-lock": "11.16.0",
+        "auth0-lock": "^11.35.1",
         "autosuggest-highlight": "3.1.1",
-        "axios": "0.19.0",
+        "axios": "^1.7.2",
         "axios-mock-adapter": "1.16.0",
-        "chart.js": "2.8.0",
+        "chart.js": "^2.9.4",
         "date-fns": "2.0.0-alpha.27",
         "downshift": "3.2.10",
-        "firebase": "6.1.0",
+        "firebase": "^10.12.3",
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.4",
-        "jsonwebtoken": "8.5.1",
+        "jsonwebtoken": "^9.0.2",
         "jss": "10.0.0-alpha.16",
         "jss-extend": "6.2.0",
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
-        "lodash": "4.17.11",
+        "lodash": "^4.17.21",
         "material-table": "1.39.0",
         "material-ui-popup-state": "1.3.2",
         "mobile-detect": "1.4.3",
-        "moment": "2.24.0",
+        "moment": "^2.30.1",
         "notistack": "0.8.5",
         "path-to-regexp": "3.0.0",
         "perfect-scrollbar": "1.4.0",
-        "prismjs": "1.16.0",
-        "qs": "6.7.0",
-        "raw-loader": "1.0.0",
+        "prismjs": "^1.29.0",
+        "qs": "^6.12.3",
+        "raw-loader": "^4.0.2",
         "react": "16.8.6",
         "react-autosuggest": "9.4.3",
         "react-beautiful-dnd": "11.0.3",
@@ -55,17 +55,17 @@
         "react-mailchimp-subscribe": "^2.1.0",
         "react-masonry-css": "1.0.12",
         "react-number-format": "4.0.8",
-        "react-popper": "1.0.2",
+        "react-popper": "^1.3.11",
         "react-redux": "7.1.0-rc.1",
         "react-router-config": "5.0.0",
-        "react-router-dom": "5.0.0",
-        "react-scripts": "3.0.1",
+        "react-router-dom": "^5.3.4",
+        "react-scripts": "^5.0.1",
         "react-select": "2.4.4",
         "react-slick": "^0.25.2",
         "react-swipeable-views": "0.13.1",
         "react-table": "6.10.0",
         "react-text-mask": "5.4.3",
-        "react-to-pdf": "0.0.8",
+        "react-to-pdf": "^1.0.1",
         "react-virtualized": "9.21.1",
         "react-window": "1.8.2",
         "react-youtube": "^7.9.0",
@@ -85,12 +85,12 @@
         "@babel/node": "7.4.5",
         "@babel/preset-env": "7.4.5",
         "cross-env": "5.2.0",
-        "globby": "9.2.0",
+        "globby": "^14.0.2",
         "js-beautify": "1.10.0",
-        "marked": "0.6.2",
+        "marked": "^13.0.2",
         "purgecss": "1.3.0",
-        "tailwindcss": "1.0.2",
-        "webpack-bundle-analyzer": "3.3.2"
+        "tailwindcss": "^3.4.4",
+        "webpack-bundle-analyzer": "^4.10.2"
     },
     "scripts": {
         "start": "yarn run tailwind && react-scripts start",
