Résolution des conflits avec la branche principale11

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.4",
         "jsonwebtoken": "^9.0.2",
-        "jss": "10.0.0-alpha.16",
         "jss-extend": "6.2.0",
+        "jss": "^9.7.0",
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
         "lodash": "^4.17.21",
