--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
         "@ckeditor/ckeditor5-build-classic": "^16.0.0",
         "@ckeditor/ckeditor5-react": "^2.1.0",
         "@date-io/date-fns": "1.3.6",
-        "@material-ui/core": "4.0.1",
-        "@material-ui/icons": "4.0.1",
-        "@material-ui/pickers": "3.0.0",
-        "@material-ui/styles": "4.0.1",
+        "@mui/material": "^5.13.2",
+        "@mui/icons-material": "^5.13.2",
+        "@mui/styles": "^5.13.2",
         "auth0-lock": "^12.5.1",
         "autosuggest-highlight": "3.1.1",
         "axios": "^1.7.2",
         "axios-mock-adapter": "1.16.0",
-        "chart.js": "^2.9.4",
+        "chart.js": "^4.0.0",
         "date-fns": "2.0.0-alpha.27",
         "downshift": "3.2.10",
         "firebase": "^10.12.3",
@@ -36,15 +35,15 @@
         "prismjs": "^1.29.0",
         "qs": "^6.12.3",
         "raw-loader": "^4.0.2",
-        "react": "16.8.6",
+        "react": "^18.0.0",
         "react-autosuggest": "9.4.3",
         "react-beautiful-dnd": "11.0.3",
         "react-big-calendar": "0.21.0",
-        "react-chartjs-2": "2.7.6",
+        "react-chartjs-2": "^4.3.0",
         "react-content-loader": "^4.3.4",
         "react-cookie-consent": "^5.1.1",
         "react-copy-to-clipboard": "^5.0.2",
-        "react-dom": "16.8.6",
+        "react-dom": "^18.0.0",
         "react-draggable": "3.3.0",
         "react-frame-component": "4.1.0",
         "react-google-recaptcha": "^2.0.1",
@@ -56,10 +55,10 @@
         "react-masonry-css": "1.0.12",
         "react-number-format": "4.0.8",
         "react-popper": "^1.3.11",
-        "react-redux": "7.1.0-rc.1",
+        "react-redux": "^8.1.0",
         "react-router-config": "5.0.0",
-        "react-router-dom": "^5.3.4",
-        "react-scripts": "^3.0.1",
+        "react-router-dom": "^6.13.0",
+        "react-scripts": "^5.0.1",
         "react-select": "2.4.4",
         "react-slick": "^0.25.2",
         "react-swipeable-views": "0.13.1",
@@ -69,26 +68,26 @@
         "react-virtualized": "9.21.1",
         "react-window": "1.8.2",
         "react-youtube": "^7.9.0",
-        "redux": "4.0.1",
-        "redux-thunk": "2.3.0",
+        "redux": "^4.2.1",
+        "redux-thunk": "^2.4.2",
         "sharethis-reactjs": "^1.5.0",
         "slick-carousel": "^1.8.1",
         "typeface-muli": "0.0.71",
         "velocity-react": "1.4.3"
     },
     "resolutions": {
-        "react": "16.8.6",
-        "react-dom": "16.8.6"
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
-        "@babel/core": "7.4.5",
-        "@babel/node": "7.4.5",
-        "@babel/preset-env": "7.4.5",
-        "cross-env": "5.2.0",
+        "@babel/core": "^7.21.5",
+        "@babel/node": "^7.21.5",
+        "@babel/preset-env": "^7.21.5",
+        "cross-env": "^7.0.3",
         "globby": "^14.0.2",
-        "js-beautify": "1.10.0",
+        "js-beautify": "^1.13.13",
         "marked": "^13.0.2",
-        "purgecss": "1.3.0",
+        "purgecss": "^4.1.3",
         "tailwindcss": "^3.4.4",
         "webpack-bundle-analyzer": "^4.10.2"
     },
